--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="mm">MM</string>
     <string name="yy">YYYY</string>
     <string name="dob">Date of Birth</string>
-    <string name="line"></string>
+    <string name="line">""</string>
     <string name="title_activity_find_patient">Retrieve Patient</string>
     <string name="title_activity_display_that_patient">Patient Information</string>
     <string name="update_vitals">Update Vitals</string>
